# parquet-sql

./: .gitignore  .gitpod.yml  README.md  pyproject.toml
