[tool.poetry]
name = "parquet-sql"
version = "0.1.0"
description = "Query Parquet files using SQL anywhere"
authors = ["pdutta777 <partha@yahoo.com>"]
readme = "README.md"
packages = [{include = "parquet_sql"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <=3.11.1"
sqlglot = "^10.4.3"
pyarrow = "^10.0.1"
fsspec = "^2022.11.0"
requests = "^2.28.1"
duckdb = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
tox = "^4.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
